--- a/src/less/home.less
+++ b/src/less/home.less
@@ -24,7 +24,7 @@ div[data-type="memos_view"] #page-wrapper {
     padding-left: 10px;
     width: 600px;
     height: 100%;
-    overflow-y: hidden;
+    // overflow-y: hidden;
   }
 
   > .content-wrapper-padding-fix {
@@ -64,7 +64,7 @@ div[data-type="memos_view"] #page-wrapper {
       padding-top: 0;
       transition: all 0.4s ease;
       transform: translateX(0);
-      overflow-y: hidden;
+      // overflow-y: hidden;
     }
   }
 }
