--- a/document/Heatmap-css-snippet.css
+++ b/document/Heatmap-css-snippet.css
@@ -52,143 +52,300 @@ settings:
 
 */
 
-.grass-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L1-bg {
+.grass-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L1-bg {
   background-color: #9be9a8 !important;
 }
-.grass-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L2-bg {
+.grass-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L2-bg {
   background-color: #40c463 !important;
 }
-.grass-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L3-bg {
+.grass-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L3-bg {
   background-color: #30a14e !important;
 }
-.grass-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L4-bg {
+.grass-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L4-bg {
   background-color: #216e39 !important;
 }
 
-.grass-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L1-bg {
+.grass-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L1-bg {
   background-color: #9be9a8 !important;
 }
-.grass-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L2-bg {
+.grass-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L2-bg {
   background-color: #40c463 !important;
 }
-.grass-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L3-bg {
+.grass-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L3-bg {
   background-color: #30a14e !important;
 }
-.grass-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L4-bg {
+.grass-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L4-bg {
   background-color: #216e39 !important;
 }
 
-/*Frame*/ 
+/*Frame*/
 
-.frame-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L1-bg {
-  background-color: #F75205 !important;
+.frame-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L1-bg {
+  background-color: #f75205 !important;
 }
-.frame-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L2-bg {
-  background-color: #E03A07 !important;
+.frame-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L2-bg {
+  background-color: #e03a07 !important;
 }
-.frame-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L3-bg {
-  background-color: #BF2104 !important;
+.frame-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L3-bg {
+  background-color: #bf2104 !important;
 }
-.frame-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L4-bg {
-  background-color: #940B01 !important;
+.frame-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L4-bg {
+  background-color: #940b01 !important;
 }
 
-.frame-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L1-bg {
-  background-color: #F75205 !important;
+.frame-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L1-bg {
+  background-color: #f75205 !important;
 }
-.frame-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L2-bg {
-  background-color: #E03A07 !important;
+.frame-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L2-bg {
+  background-color: #e03a07 !important;
 }
-.frame-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L3-bg {
-  background-color: #BF2104 !important;
+.frame-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L3-bg {
+  background-color: #bf2104 !important;
 }
-.frame-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L4-bg {
-  background-color: #940B01 !important;
+.frame-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L4-bg {
+  background-color: #940b01 !important;
 }
 
 /*Olive*/
 
-.olive-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L1-bg {
+.olive-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L1-bg {
   background-color: #9cc069 !important;
 }
-.olive-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L2-bg {
+.olive-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L2-bg {
   background-color: #78a851 !important;
 }
-.olive-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L3-bg {
+.olive-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L3-bg {
   background-color: #648b3f !important;
 }
-.olive-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L4-bg {
+.olive-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L4-bg {
   background-color: #4f6e30 !important;
-} 
+}
 
-.olive-dark.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L1-bg {
+.olive-dark.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L1-bg {
   background-color: #9cc069 !important;
 }
-.olive-dark.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L2-bg {
+.olive-dark.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L2-bg {
   background-color: #78a851 !important;
 }
-.olive-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L3-bg {
+.olive-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L3-bg {
   background-color: #648b3f !important;
 }
-.olive-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L4-bg {
+.olive-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L4-bg {
   background-color: #4f6e30 !important;
-} 
-
+}
 
 /*Ice*/
 
-.ice-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L1-bg {
+.ice-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L1-bg {
   background-color: #82bbf0 !important;
 }
-.ice-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L2-bg {
+.ice-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L2-bg {
   background-color: #5da2eb !important;
 }
-.ice-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L3-bg {
+.ice-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L3-bg {
   background-color: #3889e6 !important;
 }
-.ice-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L4-bg {
+.ice-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L4-bg {
   background-color: #126fe0 !important;
-} 
+}
 
-.ice-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L1-bg {
+.ice-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L1-bg {
   background-color: #82bbf0 !important;
 }
-.ice-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L2-bg {
+.ice-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L2-bg {
   background-color: #5da2eb !important;
 }
-.ice-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L3-bg {
+.ice-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L3-bg {
   background-color: #3889e6 !important;
 }
-.ice-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L4-bg {
+.ice-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L4-bg {
   background-color: #126fe0 !important;
-} 
-
+}
 
 /* magenta */
 
-.magenta-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L1-bg {
+.magenta-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L1-bg {
   background-color: #fa9fb5 !important;
 }
-.magenta-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L2-bg {
+.magenta-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L2-bg {
   background-color: #ea4e9c !important;
 }
-.magenta-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L3-bg {
+.magenta-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L3-bg {
   background-color: #ae017e !important;
 }
-.magenta-light.theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L4-bg {
+.magenta-light.theme-light
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L4-bg {
   background-color: #610070 !important;
-} 
+}
 
-.magenta-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L1-bg {
+.magenta-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L1-bg {
   background-color: #fa9fb5 !important;
 }
-.magenta-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L2-bg {
+.magenta-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L2-bg {
   background-color: #ea4e9c !important;
 }
-.magenta-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L3-bg {
+.magenta-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L3-bg {
   background-color: #ae017e !important;
 }
-.magenta-dark.theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L4-bg {
+.magenta-dark.theme-dark
+  div[data-type='memos_view']
+  .usage-heat-map-wrapper
+  > .usage-heat-map
+  > .stat-container.stat-day-L4-bg {
   background-color: #610070 !important;
-} 
-
+}
