Fixed bugs and add some hotkey

--- a/src/less/siderbar.less
+++ b/src/less/siderbar.less
@@ -17,6 +17,15 @@
 
 .memos-sidebar-wrapper-display {
   display: none;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 240px;
+  height: 100%;
+  padding: 16px 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  flex-shrink: 0;
 }
 
 @media only screen and (max-width: 875px) {
