--- a/src/less/suggest.less
+++ b/src/less/suggest.less
@@ -210,3 +210,19 @@
   text-decoration: none;
   background: #af487b;
 }
+
+@media only screen and (max-width: 875px) {
+  .theme-light {
+    .rta__textarea{
+      max-height: 140px;
+      overflow-y: scroll;
+    }
+  }
+
+  .theme-dark {
+    .rta__textarea{
+      max-height: 140px;
+      overflow-y: scroll;
+    }
+  }
+}
