Support copy results from query, fix css bugs, fix tag bugs, support more hotkey

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -140,9 +140,9 @@ div[data-type='memos_view'] .view-content:not(.images-wrapper) img {
     sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
-.theme-dark .side-dock-ribbon-action[aria-label='Memos'] {
-  filter: invert(1);
-}
+// .theme-dark .side-dock-ribbon-action[aria-label='Memos'] {
+//   filter: invert(1);
+// }
 
 .theme-dark div[data-type='memos_view'] body,
 .theme-dark div[data-type='memos_view'] html {
