--- a/src/less/daily-memo.less
+++ b/src/less/daily-memo.less
@@ -130,7 +130,6 @@
     padding: 0;
     font-size: 16px;
     margin-top: -3px;
-    display: -webkit-box;
 
     > .memo-content-text {
       margin-top: -14px;
@@ -145,7 +144,8 @@
       -webkit-text-overflow: ellipsis;
       -moz-text-overflow: ellipsis;
       white-space: nowrap; /*规定段落中的文本不进行换行*/
-      ** p {
+      
+      p {
         > a.link {
           width: 20em;
           display: -webkit-box;
