--- a/styles.css
+++ b/styles.css
@@ -5059,7 +5059,6 @@ div[data-type='memos_view'] .preference-wrapper > .sections-wrapper > .section-c
   padding: 0;
   font-size: 16px;
   margin-top: -3px;
-  display: -webkit-box;
 }
 .theme-dark .daily-memo-wrapper > .memo-content-container > .memo-content-text {
   margin-top: -14px;
@@ -5076,7 +5075,7 @@ div[data-type='memos_view'] .preference-wrapper > .sections-wrapper > .section-c
   white-space: nowrap;
   /*规定段落中的文本不进行换行*/
 }
-.theme-dark .daily-memo-wrapper > .memo-content-container > .memo-content-text ** p > a.link {
+.theme-dark .daily-memo-wrapper > .memo-content-container > .memo-content-text p > a.link {
   width: 20em;
   display: -webkit-box;
   -webkit-box-orient: vertical;
