Remove console.log messages

--- a/src/less/user-banner.less
+++ b/src/less/user-banner.less
@@ -53,7 +53,7 @@
     user-select: none;
 
     > .status-text {
-      .flex(column, flex-start, flex-start);
+      .flex(column, flex-start, center);
 
       > .amount-text {
         font-weight: bold;
@@ -159,7 +159,7 @@
     user-select: none;
 
     > .status-text {
-      .flex(column, flex-start, flex-start);
+      .flex(column, flex-start, center);
 
       > .amount-text {
         font-weight: bold;
