--- a/src/less/memo-editor.less
+++ b/src/less/memo-editor.less
@@ -17,6 +17,7 @@
   > .tip-text {
     font-size: 12px;
     line-height: 20px;
+    margin-top: 0px;
     color: @text-lightgray;
   }
 
@@ -66,6 +67,7 @@
   > .tip-text {
     font-size: 12px;
     line-height: 20px;
+    margin-top: 0px;
     color: @text-dark-lightgray;
   }
 
