--- a/src/less/memo-editor.less
+++ b/src/less/memo-editor.less
@@ -7,6 +7,7 @@
   height: auto;
   background-color: white;
   padding: 16px;
+  margin-bottom: 8px;
   border-radius: 8px;
   border: 2px solid @bg-gray;
 
@@ -57,6 +58,7 @@
   height: auto;
   background-color: rgb(59, 59, 59);
   padding: 16px;
+  margin-bottom: 8px;
   border-radius: 8px;
   border: 2px solid @bg-dark-gray;
 
