implementing flexbox gap

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -24,6 +24,7 @@ div[data-type='memos_view'] #page-wrapper {
     padding-left: 10px;
     width: 600px;
     height: 100%;
+    gap: 8px;
     // overflow-y: hidden;
   }
 
@@ -35,6 +36,7 @@ div[data-type='memos_view'] #page-wrapper {
     height: 100%;
     overflow-y: hidden;
     padding-left: 34px;
+    gap: 8px;
   }
 }
 
