--- a/src/less/memolist.less
+++ b/src/less/memolist.less
@@ -5,6 +5,7 @@
   flex-grow: 1;
   width: 100%;
   overflow-y: scroll;
+  gap: 8px;
   .hide-scroll-bar();
 
   > .status-text-container {
@@ -43,6 +44,7 @@
   flex-grow: 1;
   width: 100%;
   overflow-y: scroll;
+  gap: 8px;
   .hide-scroll-bar();
 
   > .status-text-container {
