--- a/styles.css
+++ b/styles.css
@@ -490,7 +490,6 @@
   height: auto;
   background-color: white;
   padding: 16px;
-  margin-bottom: 8px;
   border-radius: 8px;
   border: 2px solid #e4e4e4;
 }
@@ -522,7 +521,6 @@
     width: calc(100% - 24px);
     margin: auto;
     margin-right: 16px;
-    margin-bottom: 8px;
   }
   .theme-light img.memo-show-editor-button {
     position: fixed;
@@ -540,7 +538,6 @@
   height: auto;
   background-color: #3b3b3b;
   padding: 16px;
-  margin-bottom: 8px;
   border-radius: 8px;
   border: 2px solid #353535;
 }
@@ -572,7 +569,6 @@
     width: calc(100% - 24px);
     margin: auto;
     margin-right: 16px;
-    margin-bottom: 8px;
   }
   .theme-dark img.memo-show-editor-button {
     position: fixed;
@@ -1441,7 +1437,6 @@ div[data-type='memos_view'] .memos-header-container {
   height: 40px;
   flex-wrap: nowrap;
   margin-top: 16px;
-  margin-bottom: 8px;
   flex-shrink: 0;
 }
 div[data-type='memos_view'] .section-header-container > .title-text,
@@ -1522,7 +1517,6 @@ div[data-type='memos_view'] .memos-header-container > .btns-container {
   height: 40px;
   flex-wrap: nowrap;
   margin-top: 16px;
-  margin-bottom: 8px;
   flex-shrink: 0;
 }
 .theme-dark div[data-type='memos_view'] .section-header-container > .title-text,
@@ -1630,7 +1624,7 @@ div[data-type='memos_view'] .memos-header-container > .btns-container {
   width: 100%;
   flex-wrap: wrap;
   padding: 4px 12px;
-  padding-bottom: 12px;
+  padding-bottom: 4px;
   font-size: 13px;
   line-height: 1.8;
 }
@@ -1687,7 +1681,7 @@ div[data-type='memos_view'] .memos-header-container > .btns-container {
   width: 100%;
   flex-wrap: wrap;
   padding: 4px 12px;
-  padding-bottom: 12px;
+  padding-bottom: 4px;
   font-size: 13px;
   line-height: 1.8;
 }
@@ -3454,9 +3448,6 @@ div[data-type='memos_view'] .image-container > img {
   border-radius: 8px;
   border: 1px solid transparent;
 }
-.theme-light div[data-type='memos_view'] .memo-wrapper:not(:first-child) {
-  margin-top: 8px;
-}
 .theme-light div[data-type='memos_view'] .memo-wrapper:hover {
   border-color: #e4e4e4;
 }
@@ -3638,9 +3629,6 @@ div[data-type='memos_view'] .image-container > img {
   background-color: #303030;
   border-radius: 8px;
   border: 1px solid transparent;
-}
-.theme-dark div[data-type='memos_view'] .memo-wrapper:not(:first-child) {
-  margin-top: 8px;
 }
 .theme-dark div[data-type='memos_view'] .memo-wrapper:hover {
   border-color: #353535;
@@ -3845,6 +3833,7 @@ div[data-type='memos_view'] .image-container > img {
   flex-grow: 1;
   width: 100%;
   overflow-y: scroll;
+  gap: 8px;
   scrollbar-width: none;
 }
 .theme-light div[data-type='memos_view'] .memolist-wrapper::-webkit-scrollbar {
@@ -3899,6 +3888,7 @@ div[data-type='memos_view'] .image-container > img {
   flex-grow: 1;
   width: 100%;
   overflow-y: scroll;
+  gap: 8px;
   scrollbar-width: none;
 }
 .theme-dark div[data-type='memos_view'] .memolist-wrapper::-webkit-scrollbar {
@@ -3978,7 +3968,6 @@ div[data-type='memos_view'] .memos-header-container {
   height: 40px;
   flex-wrap: nowrap;
   margin-top: 16px;
-  margin-bottom: 8px;
   flex-shrink: 0;
 }
 div[data-type='memos_view'] .section-header-container > .title-text,
@@ -4059,7 +4048,6 @@ div[data-type='memos_view'] .memos-header-container > .btns-container {
   height: 40px;
   flex-wrap: nowrap;
   margin-top: 16px;
-  margin-bottom: 8px;
   flex-shrink: 0;
 }
 .theme-dark div[data-type='memos_view'] .section-header-container > .title-text,
@@ -4472,7 +4460,6 @@ div[data-type='memos_view'] .memos-header-container {
   height: 40px;
   flex-wrap: nowrap;
   margin-top: 16px;
-  margin-bottom: 8px;
   flex-shrink: 0;
 }
 div[data-type='memos_view'] .section-header-container > .title-text,
@@ -4553,7 +4540,6 @@ div[data-type='memos_view'] .memos-header-container > .btns-container {
   height: 40px;
   flex-wrap: nowrap;
   margin-top: 16px;
-  margin-bottom: 8px;
   flex-shrink: 0;
 }
 .theme-dark div[data-type='memos_view'] .section-header-container > .title-text,
@@ -7892,6 +7878,7 @@ div[data-type='memos_view'] #page-wrapper > .content-wrapper {
   padding-left: 10px;
   width: 600px;
   height: 100%;
+  gap: 8px;
 }
 div[data-type='memos_view'] #page-wrapper > .content-wrapper-padding-fix {
   display: flex;
@@ -7904,6 +7891,7 @@ div[data-type='memos_view'] #page-wrapper > .content-wrapper-padding-fix {
   height: 100%;
   overflow-y: hidden;
   padding-left: 34px;
+  gap: 8px;
 }
 @media only screen and (max-width: 875px) {
   div[data-type='memos_view'] body.mobile-show-sidebar #page-wrapper > .content-wrapper {
