--- a/src/less/memos-header.less
+++ b/src/less/memos-header.less
@@ -7,6 +7,7 @@ div[data-type='memos_view'] .memos-header-container {
   height: 40px;
   flex-wrap: nowrap;
   margin-top: 16px;
+  // margin-bottom: 8px;
   flex-shrink: 0;
 
   > .title-text {
@@ -75,6 +76,7 @@ div[data-type='memos_view'] .memos-header-container {
   height: 40px;
   flex-wrap: nowrap;
   margin-top: 16px;
+  // margin-bottom: 8px;
   flex-shrink: 0;
 
   > .title-text {
