Remove margin-bottom

--- a/src/less/memo-editor.less
+++ b/src/less/memo-editor.less
@@ -7,7 +7,7 @@
   height: auto;
   background-color: white;
   padding: 16px;
-  margin-bottom: 8px;
+  // margin-bottom: 8px;
   border-radius: 8px;
   border: 2px solid @bg-gray;
 
@@ -41,7 +41,7 @@
     width: calc(100% - 24px);
     margin: auto;
     margin-right: 16px;
-    margin-bottom: 8px;
+    // margin-bottom: 8px;
   }
 
   .theme-light img.memo-show-editor-button {
@@ -58,7 +58,7 @@
   height: auto;
   background-color: rgb(59, 59, 59);
   padding: 16px;
-  margin-bottom: 8px;
+  // margin-bottom: 8px;
   border-radius: 8px;
   border: 2px solid @bg-dark-gray;
 
@@ -92,7 +92,7 @@
     width: calc(100% - 24px);
     margin: auto;
     margin-right: 16px;
-    margin-bottom: 8px;
+    // margin-bottom: 8px;
   }
 
   .theme-dark img.memo-show-editor-button {
